bug mobile overflow'

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,11 @@
 *{
 	box-sizing:border-box;
 }
-
+.wrapper{
+	overflow: hidden;
+	width:100vw;
+	height:100vh;
+}
 body{
 	width:100vw;
 	height:auto;
